# pypilot-mdns

./: CMakeLists.txt  README.md  library.properties
.github/workflows/: ci.yml
examples/MdnsExample/: MdnsExample.cpp  MdnsExample.ino  MdnsExampleCore.hpp
src/: pypilot_mdns.hpp  pypilot_mdns_arduino.cpp  pypilot_mdns_avahi.cpp  pypilot_mdns_null.cpp
tests/: test_mdns_compile.cpp  test_mdns_types.cpp
